--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,5 +7,5 @@
 <div class="text-center">
     <h1 class="display-4">ยินดีต้อนรับ</h1>
     <p>ร้านขนมออนไลน์ที่ใหญ่ที่สุดในหมู่บ้านเพนกวิน</p>
-    <img src="/images/logo.jpg" width="50%"/>
+    <img src="/images/Logo.jpg" width="50%"/>
 </div>
